2.0.3 / 2012-05-07

* Bug fixes

  * Don't blow up if mass-assignment rules are strict

2.0.2 / 2012-05-04

* Breaking changes

  * Import descriptions are no longer optional
  * Import options are no longer optional (but then, they never were)

* Enhancements

  * Real documentation!
  * Make it easier to clear locks with DataMiner::Run.clear_locks
  * Replace class-level mutexes with simple Thread.exclusive calls
  * Simplified DataMiner::Dictionary

2.0.1 / 2012-04-18

* Enhancements

  * DataMiner.run -> DataMiner.perform
  * Some basic tests that don't rely on Earth

* Bug fixes

  * Fix the "call stack" - the thing that keeps infinite loops from occurring
  * Make sure sources get refreshed every time you re-run data miner
  * Make sure dictionaries " " " " " " "

2.0.0 / 2012-04-17

* Breaking changes

  * Renamed data_miner_config to data_miner_script (etc. for class/method naming)
  * Simplify DataMiner.run arguments
      was: DataMiner.run(:resource_names => ['Country'])
      now: DataMiner.run(['Country'])
  * Rename "resources" to "models"
      was: DataMiner.resource_names
      now: DataMiner.model_names
  * Expect procs instead of lambdas (because they are just instance-eval'ed now, Blockenspiel is no longer guessing where to find methods)
      was: :synthesize => lambda { class_method }
      now: :synthesize => proc { Klass.class_method }
  * Use UnicodeUtils to correctly upcase and downcase
  * Use throw/catch instead of exceptions to signal to force a step to stop successfully
      was: DataMiner::Succeed
      now: throw :data_miner_succeed
  * Import steps no longer accept deprecated :table => RemoteTable or :errata => Errata options
  * DataMiner::Run structure has changed (in addition to other internals)

* Enhancements

  * Easy to modify data miner scripts using DataMiner::Script#{append|prepend|append_once|prepend_once}
  * DRYer codebase
  * No longer depends on Blockenspiel
  * Uses UnixUtils instead of its own spawning code