@@ -1,5 +1,5 @@
-name,breed,color,age,age_units,weight,height
-Pierre,Tabby,GO,4,years,4.4,30
-Jerry,Beagle,BR/BL,5,years,10,30
-Amigo,Spanish Lizarto,GR/BU,17,years,,3
-Johnny,Beagle,BR/BL,2,years,20,45
+name,breed,color,age,age_units,weight,height,favorite_food,command_phrase
+Pierre,Tabby,GO,4,years,4.4,30,tomato,"eh"
+Jerry,Beagle,BR/BL,5,years,10,30,cheese,"che"
+Amigo,Spanish Lizarto,GR/BU,17,years,"   ",3,crickets,"    "
+Johnny,Beagle,BR/BL,2,years,20,45,"   ",
